fix: spacers should space - even for hidden buffs
Buffs are now set to invisible instead of collapsing. Again - because opacity decided to work.

--- a/src/css/betterbuffsbar.css
+++ b/src/css/betterbuffsbar.css
@@ -845,12 +845,12 @@ body {
 
 #BetterBuffsBar:not(.fade) #Buffs li.inactive,
 #BetterBuffsBar:not(.fade) #Buffs li.cooldown {
-  display: none;
+  opacity: 0;
 }
 
 #BetterBuffsBar:not(.fade):hover #Buffs li.inactive,
 #BetterBuffsBar:not(.fade):hover #Buffs li.cooldown {
-  display: block;
+  opacity: 1;
 }
 
 #UntrackedBuffs {
